# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingexts--head--0.7
#

2005-02-02 21:49:51 GMT	John Goerzen <jgoerzen@complete.org>	patch-62

    Summary:
      Tests run fine
    Revision:
      missingexts--head--0.7--patch-62


    modified files:
     ChangeLog Python/Objects/File.hs testsrc/BZip2test.hs


2005-02-02 20:40:25 GMT	John Goerzen <jgoerzen@complete.org>	patch-61

    Summary:
      Checkpointing; odd rts error
    Revision:
      missingexts--head--0.7--patch-61


    new files:
     testsrc/Dicttest.hs

    modified files:
     ChangeLog Python/Objects/Dict.hs Python/Objects/File.hs
     testsrc/BZip2test.hs testsrc/Tests.hs


2005-02-02 20:08:43 GMT	John Goerzen <jgoerzen@complete.org>	patch-60

    Summary:
      Dict.hs compiles
    Revision:
      missingexts--head--0.7--patch-60


    modified files:
     ChangeLog MissingPy.cabal Python/ForeignImports.hsc
     Python/Objects/Dict.hs Python/Objects/File.hs


2005-02-02 04:03:46 GMT	John Goerzen <jgoerzen@complete.org>	patch-59

    Summary:
      checkpointing
    Revision:
      missingexts--head--0.7--patch-59


    modified files:
     ChangeLog Python/Objects/File.hs


2005-02-01 23:00:51 GMT	John Goerzen <jgoerzen@complete.org>	patch-58

    Summary:
      Checkpointing
    Revision:
      missingexts--head--0.7--patch-58


    new files:
     Python/Objects/Dict.hs

    modified files:
     ChangeLog MissingPy.cabal Python/Objects/File.hs


2005-02-01 20:02:21 GMT	John Goerzen <jgoerzen@complete.org>	patch-57

    Summary:
      Moved foreign import declarations to their own module
    Revision:
      missingexts--head--0.7--patch-57


    new files:
     Python/ForeignImports.hsc

    modified files:
     ChangeLog MissingPy.cabal Python/Exceptions.hs
     Python/Interpreter.hs Python/Objects.hs Python/Types.hs
     Python/Utils.hs {arch}/=tagging-method

    renamed files:
     Python/Interpreter.hsc